...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Make Recipe" id="nes-5U-haE">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="PN5-ec-Q9d">
                            <connections>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gOg-yg-9uw">
                                                    <rect key="frame" x="50" y="11" width="43" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MEQ-Vj-QCL">
                                                    <rect key="frame" x="50" y="11" width="88" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter the taste" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6HJ-ei-Q4M" userLabel="Description Text Field">
                                                    <rect key="frame" x="148" y="14" width="197" height="17"/>
                                                    <nil key="textColor"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ingredients" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gs6-vW-wNY">
                                                    <rect key="frame" x="50" y="11" width="86" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter ingredients will use" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EQJ-Vb-L8o" userLabel="Ingredients Text Field">
                                                    <rect key="frame" x="146" y="13" width="199" height="17"/>
                                                    <nil key="textColor"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Steps" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b2R-k3-ERI">
                                                    <rect key="frame" x="50" y="11" width="44" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Describe every step" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ajh-Lk-BlY" userLabel="Step Text Field">
                                                    <rect key="frame" x="104" y="14" width="241" height="17"/>
                                                    <nil key="textColor"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Create Recipe" id="d0L-C0-WWf">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="njF-CN-U41">
                            <connections>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="IZC-7M-shh" userLabel="Done">
                            <connections>
                                <action selector="DoneWithSegue:" destination="ABi-fs-WbL" id="SE1-f5-N1I"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Dish List" id="Zm9-aD-2EF"/>
                    <connections>
                        <outlet property="dishTableView" destination="oil-et-Oyn" id="foJ-a8-GD4"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Recipe" id="xwn-GL-8Ic">
                        <barButtonItem key="rightBarButtonItem" title="Play Video" id="IiE-IB-dsM">
                            <connections>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="MYK-WY-c7M" userLabel="My Recipes Navigation" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="My Recipes" image="86-camera" selectedImage="86-camera" id="xww-7F-kN0"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aR1-4T-bPs">
...
